# Intro_to_Autonomous_Vehicles

./: CMakeLists.txt  README.md  Terminal Tips and YOLO error  package.xml
Audiobot GPS Algorithm/: CMakeLists.txt  README.md  package.xml
Audiobot GPS Algorithm/PROJECT REPORT/: GPS_SIM_Project_Report.odt
Audiobot GPS Algorithm/PROJECT REPORT/Under 45 seconds PROOF/VIDEO PROOF/: README
Audiobot GPS Algorithm/launch/: sim_project.launch
Audiobot GPS Algorithm/rviz/: sim_project.rviz
Audiobot GPS Algorithm/src/: gps_sim_project.cpp
Gazebo Simulations - Varying Drive Systems/launch/: homework3_mecanum.launch
Gazebo Simulations - Varying Drive Systems/src/: ackermann.cpp  diff_drive.cpp  mecanum_drive.cpp
More_Prof_Examples/ece6460_pointcloud_example/launch/: passthrough_example.launch
More_Prof_Examples/ece6460_pointcloud_example/src/: ClusterExample.cpp  ClusterExample.hpp  PassthroughExample.cpp  PassthroughExample.hpp
ROS_Prof_Examples/basic_examples/headers_example/: CMakeLists.txt  package.xml
ROS_Prof_Examples/basic_examples/headers_example/src/: header_example.cpp
ROS_Prof_Examples/basic_examples/launch_file_example/: CMakeLists.txt  package.xml
ROS_Prof_Examples/basic_examples/launch_file_example/launch/: launch_file_example.launch
ROS_Prof_Examples/basic_examples/marker_example/: CMakeLists.txt  package.xml
ROS_Prof_Examples/basic_examples/marker_example/launch/: marker_example.launch  static_transform_publisher.launch
ROS_Prof_Examples/basic_examples/marker_example/rviz/: marker_example.rviz
ROS_Prof_Examples/basic_examples/marker_example/src/: marker_example.cpp
ROS_Prof_Examples/basic_examples/namespace_example/: CMakeLists.txt  package.xml
ROS_Prof_Examples/basic_examples/namespace_example/src/: namespace_example.cpp
ROS_Prof_Examples/basic_examples/param_example/: CMakeLists.txt  package.xml
ROS_Prof_Examples/basic_examples/param_example/cfg/: ReconfigExample.cfg
ROS_Prof_Examples/basic_examples/param_example/launch/: param_example.launch
ROS_Prof_Examples/basic_examples/param_example/src/: dynamic_reconfig_example.cpp  static_param_example.cpp
ROS_Prof_Examples/basic_examples/tf_example/: CMakeLists.txt  package.xml
ROS_Prof_Examples/basic_examples/tf_example/cfg/: TFExample.cfg
ROS_Prof_Examples/basic_examples/tf_example/src/: tf_example.cpp
ROS_Prof_Examples/basic_examples/time_example/: CMakeLists.txt  package.xml
ROS_Prof_Examples/basic_examples/time_example/src/: time_example.cpp
ROS_Prof_Examples/basic_examples/timer_example/: CMakeLists.txt  package.xml
ROS_Prof_Examples/basic_examples/timer_example/src/: timer_example.cpp
ROS_Prof_Examples/dead_reckoning/: CMakeLists.txt  package.xml
ROS_Prof_Examples/dead_reckoning/src/: DeadReckoning.cpp  DeadReckoning.h  main_dead_reckoning.cpp
ROS_Prof_Examples/diff_drive_kinematics/src/: diff_drive_kinematics.cpp
ROS_Prof_Examples/gps_example/: CMakeLists.txt  package.xml
ROS_Prof_Examples/gps_example/launch/: gps_example.launch
ROS_Prof_Examples/gps_example/src/: gps_example.cpp
ROS_Prof_Examples/hector_example/launch/: hector_example.launch
ROS_Prof_Examples/maze_world_navigation/: CMakeLists.txt  package.xml
ROS_Prof_Examples/maze_world_navigation/launch/: maze_world_navigation.launch
ROS_Prof_Examples/maze_world_navigation/yaml/: global_costmap_params.yaml  move_base_params.yaml
ROS_Prof_Examples/transform_example/: CMakeLists.txt  package.xml
ROS_Prof_Examples/transform_example/launch/: transform_example.launch
ROS_Prof_Examples/transform_example/src/: tf_example1.cpp  tf_example2.cpp  tf_example2_pubsub.cpp  transform_example1.cpp  transform_example2.cpp
ROS_Prof_Examples/urdf_example/launch/: urdf_example.launch
ROS_Prof_Examples/urdf_example/src/: JointStateMsgPub.cpp  JointStateMsgPub.h
ROS_Prof_Examples/urdf_example/urdf/: urdf_example.urdf
Template_Files/Reconfig and Custom Msg/lidar_bbox/: CMakeLists.txt  package.xml
Template_Files/Reconfig and Custom Msg/lidar_bbox/cfg/: PointCloudbbox.cfg
Template_Files/Reconfig and Custom Msg/lidar_bbox/launch/: lidar_bbox.launch
Template_Files/Reconfig and Custom Msg/lidar_bbox/src/: lidar_bbox.cpp  lidar_bbox.h  main.cpp
Template_Files/Reconfig and Custom Msg/lidar_filter/: CMakeLists.txt  package.xml
Template_Files/Reconfig and Custom Msg/lidar_filter/cfg/: PointCloudFilter.cfg
Template_Files/Reconfig and Custom Msg/lidar_filter/launch/: lidar_filter.launch
Template_Files/Reconfig and Custom Msg/lidar_filter/msg/: cluster_info.msg
Template_Files/Reconfig and Custom Msg/lidar_filter/rviz/: svcConfig.rviz
Template_Files/Reconfig and Custom Msg/lidar_filter/src/: lidar_filter.cpp  lidar_filter.h  main.cpp
Template_Files/Reconfig and Custom Msg/lidar_filter/worlds/: ready4filter.world
Template_Files/basics/fundamentals/: package.xml
Template_Files/basics/fundamentals/src/: main.cpp
basics/fundamentals/: CMakeLists.txt
basics/fundamentals/src/: fundamentals.cpp  fundamentals.h
launch/: homework3_ackermann.launch  homework3_diff.launch
