<?xml version="1.0"?>
<package format="2">
  <name>lidar_filter</name>
  <version>0.0.0</version>
  <description>
    Practice messing around with Lidar today. Lets see if we can put a box around stuff
  </description>
  <maintainer email="bengrudz88@gmail.com">Ben Grudzien</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_export_depend>message_runtime</build_export_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>pcl_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>jsk_recognition_msgs</depend>

</package>
